namespace Mgx.Control {
    public enum Orientation {
        Horizontal,
        RHorizontal,
        Vertical,
        RVertical
    }
}