namespace Mgx.Layout {
    public enum HAlignment {
        Left,
        Center,
        Right
    }

    public enum VAlignment {
        Top,
        Center,
        Bottom
    }
}