namespace Mgx.View {
    public enum ViewState {
        Opening,
        Open,
        Greedy,
        Closing,
        Closed,
        Hiding,
        Hidden
    }    
}